[MM-19865] Fix modal close button to not overlap when screen is… (#361)
* fix full screen modal header close button

* fix placement of x. change width of modal content

* add padding

--- a/webapp/src/components/modals/full_screen_modal/full_screen_modal.scss
+++ b/webapp/src/components/modals/full_screen_modal/full_screen_modal.scss
@@ -12,8 +12,8 @@ $full-screen-modal-transition: 100ms;
 
     .close-x {
         position: fixed;
-        top: 48px;
-        right: 48px;
+        top: 8px;
+        right: 16px;
         cursor: pointer;
         svg {
             fill: var(--center-channel-color-90);
